--- a/galeria.html
+++ b/galeria.html
@@ -11,12 +11,12 @@
 <h1>Galería de Imágenes</h1>
 <div class="galeria-con-marco">
 <div class="galeria">
-<img src="C:\Users\usuariocc10\Desktop\Proyecto_JS\GettyImages-1645160129.2e16d0ba.fill-1200x630.jpg" alt="Imagen 1">
-<img src="C:\Users\usuariocc10\Desktop\Proyecto_JS\images (1).jpg" alt="Imagen 2">
-<img src="C:\Users\usuariocc10\Desktop\Proyecto_JS\kobe71213164.jpg" alt="Imagen 3">
-<img src="C:\Users\usuariocc10\Desktop\Proyecto_JS\unnamed-1-1.jpg" alt="Imagen 4">
-<img src="C:\Users\usuariocc10\Desktop\Proyecto_JS\images.jpg" alt="Imagen 5">
-<img src="C:\Users\usuariocc10\Desktop\Proyecto_JS\GettyImages-1645160129.2e16d0ba.fill-1200x630.jpg" alt="Imagen 6">
+<img src="GettyImages-1645160129.2e16d0ba.fill-1200x630.jpg" alt="Imagen 1">
+<img src="images (1).jpg" alt="Imagen 2">
+<img src="kobe71213164.jpg" alt="Imagen 3">
+<img src="unnamed-1-1.jpg" alt="Imagen 4">
+<img src="images.jpg" alt="Imagen 5">
+<img src="GettyImages-1645160129.2e16d0ba.fill-1200x630.jpg" alt="Imagen 6">
 </div>
 </div>
 </body>
