--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <section id="bienvenida">
 <h1>Mi proyecto social</h1>
 <p>¡Bienvenidos a nuestra presentación!</p>
-<img src="C:\Users\usuariocc10\Desktop\Proyecto_JS\kobe71213164.jpg" alt="Kobe Bryant" width="300">
+<img src="kobe71213164.jpg" alt="Kobe Bryant" width="300">
 <h2>Integrantes:</h2>
 <ul>
 <li>Juan Arámbula</li>
