--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <li><a href="carrusel.html">Bienvenida</a></li>
 <li><a href="galeria.html">Galería</a></li>
 <li><a href="#info">Información de Proyecto</a></li>
-<li><a href="#quienes">Quienes somos</a></li>
+<li><a href="somos.html">Quienes somos</a></li>
 <li><a href="#contactos">Contactos</a></li>
 </ul>
 </nav>
