--- a/somos.html
+++ b/somos.html
@@ -94,7 +94,7 @@
             <br>Buscamos inspirar a otros a perseguir la excelencia académica y a convertirse en agentes de cambio.
             <br>Juntos, trabajamos para construir un futuro donde la educación de calidad sea accesible para todos.
         </p>
-        <a href="URL_DE_TU_ARCHIVO_DE_CANVA" target="_blank" class="button">Ver Nuestro Trabajo en Canva</a>
+        <a href="https://teams.microsoft.com/l/message/19:fdf49fc41a434877980e7302a9c8d580@thread.v2/1749753853374?context=%7B%22contextType%22%3A%22chat%22%7D" target="_blank" class="button">Ver Nuestro Trabajo en Canva</a>
     </div>
 </body>
 </html>
